// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBarButtons renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        title="Change language"
      >
        Українська
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change color"
        title="'Test Theme', click to change"
      >
        <span
          class="navigationBarButtons__theme"
          role="img"
        >
          ⨁
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        title="Change language"
      >
        Українська
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change color"
        title="'Test Theme', click to change"
      >
        <span
          class="navigationBarButtons__theme"
          role="img"
        >
          ⨁
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        title="Change language"
      >
        English
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change color"
        title="'Test Theme', click to change"
      >
        <span
          class="navigationBarButtons__theme"
          role="img"
        >
          ⨁
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        title="Change language"
      >
        English
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change color"
        title="'Test Theme', click to change"
      >
        <span
          class="navigationBarButtons__theme"
          role="img"
        >
          ⨁
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        title="Change language"
      >
        Русский
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change color"
        title="'Test Theme', click to change"
      >
        <span
          class="navigationBarButtons__theme"
          role="img"
        >
          ⨁
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        title="Change language"
      >
        Русский
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change color"
        title="'Test Theme', click to change"
      >
        <span
          class="navigationBarButtons__theme"
          role="img"
        >
          ⨁
        </span>
      </button>
    </li>
  </ul>
</div>
`;
